@@ -12,6 +12,8 @@ Revision history for Perl extension App::Sqitch
        `$Config{prefix}/etc/skitch`, unless built with `--prefix` or
        `--install_base`, in which case it will simply be installed into `etc`
        in that directory.
+     - Added `--etc-path`, so that one can know where the system-wide
+       configuration and templates are to be found.
 
 0.11  2012-04-27T06:44:54Z
      - Implemented `init` command.
